--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 /*
     MAIN
 */
-.container{
+main .container{
     width: 90vw;
     height: 90vh;
     display: flex;
@@ -50,16 +50,8 @@ section.left{
     width: 30%;
 }
 
-section .user{
-    min-height: var(--min-height-medium);
-}
-
 section .bell{
     min-height: var(--min-height-big);
-}
-
-section .search{
-    min-height: var(--min-height-small);
 }
 
 section .friends{
@@ -70,18 +62,38 @@ section.right{
     width: 70%;
 }
 
-section .contact{
-    min-height: var(--min-height-medium);
-}
-
 section .chat{
     height: calc(100% - (var(--min-height-medium) * 2));
 }
 
-section .message{
-    min-height: var(--min-height-medium);
+        /* MSG */
+.container-msg{
+    width: 100%;
+    height: 100%;
+    padding: 5%;
 }
-
+.msg-row{
+    margin: 10px 0;
+    display: flex;
+}
+.msg-row.sended{
+    justify-content: end;
+}
+.msg-row.received{
+    justify-content: start;
+}
+.message{
+    max-width: 60%;
+    min-width: 200px;
+    padding: 10px 10px 15px;
+    border-radius: 10px;
+}
+.message.sended{
+    background-color: rgb(213, 249, 186);
+}
+.message.received{
+    background-color: white;
+}
 /*
     /MAIN
 */
