--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,14 @@
 :root{
     --bg-green: rgb(0, 150, 136);
     --bg-grey: rgb(216, 219, 214);
+    --top-grey: rgb(234, 234, 234);
     --small: 50px;
     --medium: 75px;
-    --big: 100px;
+}
+
+span{
+    font-size: 10px;
+    color: lightgrey;
 }
 /*
     /GENERAL
@@ -46,7 +51,6 @@ main .container{
     display: flex;
 }
 
-
 /*
     SECTION LEFT
 */
@@ -55,22 +59,25 @@ section.left{
 }
 
 section .bell{
-    min-height: var(--big);
+    min-height: var(--medium);
+    background-color: rgb(142, 218, 252);
+}
+
+section .search{
+    background-color: white;
+    border: 5px solid rgb(243, 238, 234);
 }
 
     /* FRIENDS */
 section .friends{
-    height: calc(100% - calc(var(--small) + var(--medium) + var(--big)));
+    height: calc(100% - calc(var(--small) * 2 + var(--medium)));
+    background-color: white;
     overflow: auto;
 }
-
 .friend-box{
     display: flex;
-}
-.image img{
-    width: var(--small);
-    border-radius: 50%;
-    margin: 5px 10px;
+    padding: 7px 10px 5px;
+    border-top: 1px solid lightgrey;
 }
 .friend-box .text{
     width: calc(100% - var(--small) - 10%);
@@ -90,8 +97,17 @@ section.right{
     width: 70%;
 }
 
+section .contact{
+    border-left: 1px solid lightgrey;
+}
+
+section .contact span{
+    color: grey;
+}
+
 section .chat{
-    height: calc(100% - (var(--medium) * 2));
+    height: calc(100% - (var(--medium) + var(--small)));
+    background-image: url(/img/mine.jpg);
 }
 
     /* MSG */
@@ -121,6 +137,11 @@ section .chat{
 }
 .message.received{
     background-color: white;
+}
+    /* /MSG */
+
+section .send-message{
+    background-color: rgb(243, 238, 234);
 }
 /*
     /SECTION RIGHT
