--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,26 @@ section .chat{
 
 section .send-message{
     background-color: rgb(243, 238, 234);
+    justify-content: space-between;
+    align-items: center;
+}
+
+.send-text{
+    width: 80%;
+}
+.send-text input{
+    width: 100%;
+    min-height: var(--small);
+    border: 0;
+    border-radius: 10px;
+    padding: 15px
+}
+.send-message .icon-container{
+    width: 10%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /*
     /SECTION RIGHT
