--- a/css/general.css
+++ b/css/general.css
@@ -1,10 +1,3 @@
-/* DEBUG */
-/* .debug{
-    background-color: rgba(0, 255, 0, 0.2);
-    border: 1px solid black;
-} */
-
-
 /* GENERAL */
 *{
     padding: 0;
@@ -26,7 +19,10 @@ span{
     color: grey;
 }
 
-i{
+.user i,
+.contact i,
+.search i,
+.send-message i{
     font-size: 20px;
     color: rgb(177, 177, 177);
 }
